fix: fix text overflow in banner on small screens

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -57,9 +57,9 @@
   color: #fff;
 }
 
-@media (max-width: 768px) {
+@media screen and (max-width: 768px) {
   .main__content h1 {
-    font-size: 3rem;
+    font-size: 2.5rem;
   }
   .main__content p {
     font-size: 1rem;
